# PyForge-CLI

./: .gitignore  404.html  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DATABRICKS-DEPLOYMENT-GUIDE.md  Makefile  PROJECT_SUMMARY.md  PyForge-Databricks-Integration-Architecture-v2.md  PyForge-Databricks-Notebook-API-Reference.md  PyForge-Notebook-Integration-Architecture.md  README.md  TASK-REVIEW-REPORT.md  TESTING.md  bug-report-missing-get-metadata.md  constraints-databricks-serverless-v1.txt  constraints-databricks-serverless-v2.txt  create_test_pdf.py  csv_to_parquet_feature_request.md  demo_output_paths.py  example_usage.py  index.html  metadata.json  mkdocs.yml  pr-description-develop.md  pyforge_databricks_volume_integration_notebook.ipynb  pyforge_notebook_integration_sample.ipynb  pyproject.toml  pyspark_env_setup.sh  quick_test.py  requirements-dev.txt  run_pyspark_tests.py  simple_test.py  sitemap.xml  test_output_path.py
.claude/: settings.local.json
.github/: CODEOWNERS  branch-protection-rules.md  branch-protection.md  test-matrix.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  databricks_issue.md  documentation_datasets_feature.md  feature_request.md
.github/workflows/: ci-develop.yml  ci-legacy.yml  ci-main.yml  ci.yml  collect-sample-datasets.yml  coverage-comment.yml  docs-simple.yml  docs.yml  docs.yml.bak  publish.yml  pyspark-tests.yml  release.yml  test-report.yml
AZURE_DEVOPS_PYTHON_PACKAGE_PUBLISHING_GUIDE/: index.html
BUILD_AND_DEPLOY_GUIDE/: index.html
GITHUB_REPO_SETUP/: index.html
LOCAL_INSTALL_TEST_GUIDE/: index.html
PYPI_AUTHENTICATION_OPTION_A/: index.html
USAGE/: index.html
about/: index.html
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
api/: index.html
api/plugin-development/: index.html
api/python-api/: index.html
automated-deployment/: index.html
automated-versioning-deployment-design/: index.html
claude-logs/: develop-main-merge-analysis_2025-07-13_09-17-36.md  session-2025-01-05-databricks-tests-investigation.md  test-coverage-reporting-analysis-2025-01-06-14-30.md  test-fixes-comprehensive-log_2025-07-04_17-10-25.md  test-optimization-and-cicd-implementation_2025-07-04_17-20-35.md
claude-notes/: databricks-extension-testing-instructions.md  databricks-git-backup-implementation-guide.md  databricks-git-backup-prd.md  databricks-git-backup-solution-architecture.md  databricks-git-backup-tasks.md  main-vs-develop-branches.md  mdb-fix-changes-summary.md  mdb-fix-technical-details.md
converters/: index.html
converters/csv-to-parquet/: index.html
converters/database-files/: index.html
converters/dbf-files/: index.html
converters/excel-to-parquet/: index.html
converters/mdf-tools-installer/: index.html
converters/pdf-to-text/: index.html
converters/xml-quick-reference/: index.html
converters/xml-to-parquet/: index.html
databricks-integration-plan/: index.html
databricks-serverless-compatibility-analysis/: index.html
databricks-serverless-guide/: index.html
developer-notes/: index.html
developer-notes/SPARK_CONNECT_SETUP/: index.html
docs/: BRANCHING_STRATEGY.md  BUILD_AND_DEPLOY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOCAL_INSTALL_TEST_GUIDE.md  README.md  USAGE.md  ci-test-coverage-setup.md  databricks-notebook-backup-guide.md  databricks-pyspark-compatibility.md  databricks-serverless-comparison.md  databricks-serverless-compatibility-analysis.md  databricks-serverless-guide.md  development-setup-changes.md  implementation-summary.md  index.md  plugin-architecture.md  pypi-trusted-publisher-setup.md  python-constraints-explained.md  python-development-best-practices.md  sample-datasets.md  xml-converter.md
docs/about/: changelog.md  index.md
docs/analysis/: databricks-extension-plugin-analysis.md
docs/api/: extension-best-practices.md  extension-developer-guide.md  index.md  python-api.md
docs/converters/: database-files.md  dbf-files.md  excel-to-parquet.md  index.md  mdf-tools-installer.md
docs/developer-notes/: README.md
docs/getting-started/: development-setup.md  index.md  installation.md  quick-start.md
docs/migration/: user-migration-guide.md
getting-started/: index.html
issues/: ISSUE-Databricks-Extension.md
mdb-dbf-library-evaluation/: index.html
package-structure/: README.md
package-structure/pyforge-core/: pyproject.toml
package-structure/pyforge-core/.github/workflows/: publish.yml
package-structure/pyforge-databricks/: pyproject.toml
package-structure/pyforge-databricks/.github/workflows/: publish.yml
pypi-automated-deployment-best-practices/: index.html
pypi-trusted-publisher-setup/: index.html
python-package-distributions/: pyforge_cli-0.2.4-py3-none-any.whl
reference/: index.html
rest-api-wrapper-design/: index.html
sample-datasets/: index.html
scripts/: create_release_artifacts.py  datasets-config.json  download_direct.py  download_kaggle.py  fix_notebook_json.py  last_deployment.json  setup-branch-protection.sh  setup_dev_environment.py  setup_pyspark_testing.py  setup_test_environment.sh
search/: search_index.json
stylesheets/: extra.css
tasks/: PRD-Databricks-Extension-Revised.md  TASKS-Databricks-Extension.md  prd-mdf-mdb-converter.md  tasks-automated-pypi-deployment.md  tasks-mdb-dbf-converter-v2.md  tasks-mdf-mdb-converter.md
test_data/: array_final.parquet  output.parquet
tests/: README.md  conftest.py  test_csv_converter.py  test_csv_integration.py  test_database_converters.py  test_database_detector.py  test_database_readers.py  test_databricks_environment.py  test_databricks_extension.py  test_excel_converter_improved.py  test_extension_integration.py  test_extension_system.py  test_main_cli.py  test_main_cli_improved.py  test_mdb_converter_improved.py  test_mdf_tools_installer.py  test_output_path.py  test_pdf_converter.py  test_pyspark_csv_converter.py  test_sample_datasets_installer.py  test_string_converter.py  test_xml_converter.py
tutorials/: index.html
xml-converter/: index.html
xml-quick-reference/: index.html
(+190 files in other folders)
