[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyforge-cli"
version = "0.5.1"
description = "A powerful CLI tool for data format conversion and synthetic data generation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Santosh Dandey", email = "dd.santosh@gmail.com"},
]
keywords = ["cli", "data", "conversion", "pdf", "csv", "parquet", "excel", "database", "mdb", "dbf", "synthetic-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "tqdm>=4.64.0",
    "PyMuPDF>=1.23.0",
    "pathlib-mate>=1.0.0",
    "pyarrow>=17.0.0",
    "pandas>=2.0.3",
    "chardet>=5.2.0",
    "pandas-access>=0.0.1",
    "dbfread>=2.0.7",
    "openpyxl>=3.1.5",
    "docker>=6.1.0",
    "requests>=2.28.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
]

# Databricks extension
databricks = [
    "databricks-sdk>=0.36.0", 
    "pyspark>=3.5.0; platform_system!='Darwin' or platform_machine!='arm64'",
]

# Future cloud platform integrations
# aws = ["boto3>=1.26.0", "s3fs>=2023.1.0"]
# azure = ["azure-storage-blob>=12.17.0", "azure-identity>=1.13.0"]
# gcp = ["google-cloud-storage>=2.10.0", "gcsfs>=2023.1.0"]

# Convenience bundles
all = ["pyforge-cli[dev,docs]"]

[project.urls]
Homepage = "https://github.com/Py-Forge-Cli/PyForge-CLI"
Repository = "https://github.com/Py-Forge-Cli/PyForge-CLI"
Issues = "https://github.com/Py-Forge-Cli/PyForge-CLI/issues"
Documentation = "https://github.com/Py-Forge-Cli/PyForge-CLI/blob/main/docs"
Changelog = "https://github.com/Py-Forge-Cli/PyForge-CLI/blob/main/CHANGELOG.md"

[project.scripts]
pyforge = "pyforge_cli.main:cli"

[project.entry-points."pyforge.extensions"]
# Databricks extension entry point (will be active when extension is implemented)
# databricks = "pyforge_cli.extensions.databricks:DatabricksExtension"

[project.entry-points."pyforge.converters"]
# Core converters
csv = "pyforge_cli.converters.csv_converter:CSVConverter"
excel = "pyforge_cli.converters.excel_converter:ExcelConverter"
xml = "pyforge_cli.converters.xml_converter:XMLConverter"
pdf = "pyforge_cli.converters.pdf_converter:PDFConverter"
mdb = "pyforge_cli.converters.mdb_converter:MDBConverter"
dbf = "pyforge_cli.converters.dbf_converter:DBFConverter"

# Extension converters (will be active when extensions are implemented)
# spark_csv = "pyforge_cli.extensions.databricks.converters.spark_csv:SparkCSVConverter"
# spark_excel = "pyforge_cli.extensions.databricks.converters.spark_excel:SparkExcelConverter"
# spark_xml = "pyforge_cli.extensions.databricks.converters.spark_xml:SparkXMLConverter"
# delta = "pyforge_cli.extensions.databricks.converters.delta_converter:DeltaConverter"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pyforge_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[dependency-groups]
dev = [
    "bandit>=1.7.10",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.0",
    "twine>=6.1.0",
]
